[package]
name = "aist_land_dem_batch_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.30"
image = "0.25.2"
mpi = {version="0.8.0", optional=true}
rayon = "1.10.0"
reqwest = "0.12.7"
tokio = { version = "1.39.3", features = ["full"] }

[features]
mpi = ["dep:mpi"]
